[tool.poetry]
name = "epicpoints"
version = "0.1.0"
description = "Utilization functions of polane"
authors = ["Win Htet Aung <whaung1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
