[tool.poetry]
name = "epicpoints"
version = "0.1.1"
description = "Utilization functions of point on a 2D plane"
authors = ["Win Htet Aung <whaung1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
